--- a/earthquake_dashboard/index.html
+++ b/earthquake_dashboard/index.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1>Earthquake Data Dashboard</h1>
-      <p>The data below represents earthquakes in the last seven days that is updated every day from the
+      <h1>All Earthquakes from the Past 7 Days</h1>
+      <p>Updated every day from the
       <a href="https://earthquake.usgs.gov/" target="_blank">United States Geological Survey (USGS)</a> 
-      using Leaflet to plot the data. More red and larger the circle the greater the magnitude of the earhtquake. Click on each circle to get more information.
+      using Leaflet to plot the data. Earthquakes with higher magnitudes are represented larger in circle and more red in color. Click on each circle to get more information.
       </p>
     </div>
 
